--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,19 @@ click==8.1.7
 filelock==3.15.4
 Flask==3.0.3
 fsspec==2024.6.1
+gunicorn==22.0.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 llvmlite==0.43.0
 MarkupSafe==2.1.5
+more-itertools==10.3.0
 mpmath==1.3.0
 networkx==3.3
 numba==0.60.0
 numpy==2.0.0
 openai-whisper @ git+https://github.com/openai/whisper.git@ba3f3cd54b0e5b8ce1ab3de13e32122d0d5f98ab
+packaging==24.1
 regex==2024.5.15
 requests==2.32.3
 six==1.16.0
